Dark Mode - fixed mobile issues
button unresponsive, background color not aligned on ios26 safari.

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ body * {
     height: 30px;
     width: 30px;
     cursor: pointer;
+    z-index: 100;
 }
 #theme-color div{
     width: 100%;
@@ -88,7 +89,7 @@ body.dark #theme-color div{
 }
 body.dark {
     background-image: radial-gradient(ellipse 80% 180vh at 50% 30vh, #3f3f3f, black);
-    background-color: #2f2f2f;
+    background-color: #1c1c1c;
     color: #ededed;
 }
 body.dark a {
